<resources>
    <string name="app_name">Dyslexia Awareness App</string>
    <string name="banner_text_description">разбери ме. помогни ми. научи ме.</string>
    <string name="dyslexia_intro">Дислексията НЕ Е заболяване и НЕ Е увреждане. Хората с дислексия имат различно възприятие, те опознават света около себе си по различен начин.
    Децата с дислексия се учат да пишат, четат или смятат като всяко друго дете - чрез упражнения, просто процесът е специфичен спрямо нуждите им.</string>
    <string name="dyslexia_what_is_button">какво е дислексия</string>
    <string name="make_test_button">направи тест</string>
    <string name="dyscalculia_what_is_button">какво е дискалкулия</string>
    <string name="dysgraphia_what_is_button">какво е дисграфия</string>
    <string name="list_of_professionals_button">списък на специалити по градове</string>
    <string name="additional_info_button">допълнителна информация и ресурси</string>
</resources>
